<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">GSM пульт</string>
    <string name="home_notification">Home notification</string>
    <string name="notify_enable">Enable notify</string>
    <string name="notify_disable">Disable notify</string>
    <string name="Relay_1">Relay 1</string>
    <string name="Relay_1_disable">Relay 1 disable</string>
    <string name="Relay_1_enable">Relay 1 enable</string>
    <string name="Relay_2_disable">Relay 2 disable</string>
    <string name="Relay_2_enable">Relay 2 enable</string>
    <string name="get_data">Get data</string>
    <string name="get_temperature">Get temperature</string>
    <string name="settings">Settings</string>
    <string name="add_device">Add new device</string>
    <string name="edit_device">Edit device</string>
    <string name="grad">°C</string>
    <string name="temper_limit">Temperature limit</string>
    <string name="mode_0">Mode 0</string>
    <string name="mode_1">Mode 1</string>
    <string name="temperature_limit_settings">Set limit temperature and mode</string>
    <string name="tmin_hint">Tmin °C</string>
    <string name="tmax_hint">Tmax °C</string>
    <string name="apply">Apply</string>
    <string name="device_name">Device name</string>
    <string name="device_number">Device GSM number</string>
    <string name="password">Password</string>
    <string name="first_launch">First launch! Please add device.</string>
    <string name="wait_please">Please wait…</string>
    <string name="querying_device">Querying device…</string>
    <string name="sms_sent_success">SMS sent successfully</string>
    <string name="generic_failure">Generic failure</string>
    <string name="no_service">No service</string>
    <string name="null_message">No message</string>
    <string name="radio_off">Radio is off</string>
    <string name="sms_deliver_success">SMS delivered successfully</string>
    <string name="result_canceled">SMS result canceled</string>
    <string name="setting_mode">Setting device mode…</string>
    <string name="resetting_device">Restarting device…</string>
    <string name="data_not_full">Fill all values, please</string>
    <string name="remove_device">Remove device</string>
    <string name="send_notify_sms">Send SMS on alert</string>
    <string name="not_send_notify_sms">Do not send SMS</string>
    <string name="time_to_arm">Time to arm in seconds</string>
    <string name="manage_input">Вход управления</string>
    <string name="ibutton">I-Button</string>
    <string name="button">Кнопка</string>
    <string name="tumbler">Тумблер</string>
    <string name="on_power_loss">При потере питания 220V</string>
    <string name="send_sms">Высылать SMS</string>
    <string name="time_to_send">Время ожидания до отсылки (сек.)</string>
    <string name="from_0_to_255">От 0 до 255</string>
    <string name="sms_at_arm">SMS при постановке</string>
    <string name="sms_on_disarm">SMS при снятии</string>
    <string name="sms_on_wrong_key">SMS - чужой ключ</string>
    <string name="new_password">Пароль (4 цифры)</string>
    <string name="phone_number">Номер телефона</string>
    <string name="info">Инфо</string>
    <string name="manage">Упр</string>
    <string name="confirm">Под</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="recall_cycles">Циклы дозвона</string>
    <string name="from_1_to_15">1…15</string>
    <string name="call_length">Длительность посылки вызова (сек.)</string>
    <string name="from_30_to_60">30…60</string>
    <string name="balance_number">Номер проверки баланса</string>
    <string name="temper_control">Включить Т.К.</string>
    <string name="tc_limit">Порог температуры</string>
    <string name="tc_growing">Режим 0 - рост температуры</string>
    <string name="tc_fading">Режим 1 - падение температуры</string>
    <string name="activate_sound">Активировать сирену</string>
    <string name="activate_inner_sound">Активировать внутр. сигн.</string>
    <string name="tc_on_limit">При достижении лимита</string>
    <string name="termostat">Термостат (Реле 1)</string>
    <string name="temperature">Температуры</string>
    <string name="outputs">Выходы</string>
    <string name="inputs">Входы</string>
    <string name="phones">Телефоны</string>
    <string name="common">Общие</string>
    <string name="time_to_wait_before_call">Время до начала дозвона или SMS (сек.)</string>
    <string name="time_to_rearm">Время до восстановления наблюдения (сек.)</string>
    <string name="constant_control">Постоянный контроль</string>
    <string name="inner_sound">Внутренний сигнализатор</string>
    <string name="phone_id">ID телефона</string>
    <string name="call">Дозвон</string>
    <string name="sms">SMS</string>
    <string name="sms_text">Текст SMS (до 40 знаков латиницей)</string>
    <string name="pcn">ПЦН</string>
    <string name="enable_on_arm_disable_on_unarm">Вкл при постановке, откл при снятии</string>
    <string name="enable_on_unarm">Вкл. при снятии (сек.)</string>
    <string name="enable_on_alarm">Вкл при тревоге (мин.)</string>
    <string name="from_0_to_1500">От 0 до 1500</string>
    <string name="output_number">Номер выхода</string>
    <string name="input_number">Номер входа</string>
    <string name="plus_seven">+7</string>
    <string name="tc_15dot0" translatable="false">15.0</string>
    <string name="tc_30dot0" translatable="false">30.0</string>
    <string name="tc_28dot0" translatable="false">28.0</string>
    <string name="setting_temp_mode">Установка режима Т.К.</string>
    <string name="enter_0_for_delete">Введите 0 для удаления</string>
    <string name="manage_device">Управление</string>
    <string name="existing_device">Устройство с таким номером уже существует!</string>
    <string name="settings_applied">Настройки применены!</string>
    <string name="temp_report_switch">Температура</string>
    <string name="info_report_switch">Инфо</string>
    <string name="sms_daily_report">Ежедневный SMS-отчёт</string>
    <string name="restart">Рестарт</string>
    <string name="report">Отчёт</string>
    <string name="immediate_reset">Немедленная перезагрузка</string>
    <string name="reset_device">Перезагрузить устройство</string>
    <string name="enable">Вкл.</string>
    <string name="disable">Выкл.</string>
    <string name="setting_reports_mode">Установка режима отчетов</string>
    <string name="release_notes_title">Заметки к релизу</string>
    <string name="release_notes"><![CDATA[<b>Внимание!</b> <br/> Просьба пересоздать все ранее созданные устройства, т.к. формат сохраняемых в телефоне данных изменен. <br/> В новой версии информация о текущих настройках устройства не сохраняется, посылаются все настройки сразу.]]></string>
    <string name="history">History</string>
    <string name="delete_history">Delete history</string>
    <string name="notify_on_sms">Notify on SMS</string>
    <string name="warning">Warning!</string>
    <string name="query_all_devices">Query all devices</string>
    <string name="alarm_history">Alarm history</string>
    <string name="clear_all_history">Clear all history</string>
    <string name="clear_all_history_confirm">Are you sure to clear all history from all devices?</string>
    <string name="armed_matcher">armed</string>
    <string name="disarmed_matcher">disarm</string>
    <string name="alarm_matcher">alarm</string>
    <string name="alarm_matcher_qaud">achtung!</string>
    <string name="warning_matcher_qaud">opened</string>
    <string name="armed_bus_alarm_matcher">warning</string>
    <string name="status_matcher">status</string>
    <string name="sms_wait_timeout">Timeout waiting for device to answer</string>
    <string name="notify_with_sound">Ring on SMS</string>
    <string name="notify_alarm_with_sound">Ring on alarm</string>
    <string name="archive_suffix">(Archived)</string>
    <string name="db_cant_query_history">Can\'t query history DB</string>
    <string name="db_cant_delete_history">Can\'t delete from history DB</string>
    <string name="device_additional_info">Device additional info</string>
    <string name="stop_query_devices">Stop device querying</string>
    <string name="work_ongoing">Work ongoing</string>
    <string name="is_gsm_qaud">GSM Qaud</string>
    <string name="ibutton_history">iButton history</string>
    <string name="disarmed_power_matcher">power up</string>
    <string name="alarm_power_matcher">power down</string>
    <string name="power_matcher_db">Power</string>
    <string name="power_history">Power history</string>
    <string name="export_alarms">Export alarms</string>
    <string name="db_cant_export_to_csv">DB: Can\'t export to CSV!</string>
    <string name="date_from">Date from</string>
    <string name="date_to">Date to</string>
    <string name="csv_first_row">Date,Time,TZ,Address,Status,Sms text</string>
    <string name="saved_to">Saved to:</string>
    <string name="error_saving_csv">Error saving CSV</string>
    <string name="file_name">File name</string>
</resources>
