<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/add_device"
          android:title="@string/add_device"
          android:icon="@android:drawable/ic_menu_add"
          app:showAsAction="ifRoom|withText"
          android:orderInCategory="102" />

    <item android:id="@+id/query_all_devices"
          android:title="@string/query_all_devices"
          android:icon="@drawable/ic_menu_wifi_icon"
          app:showAsAction="ifRoom|withText"
          android:orderInCategory="105" />

    <item android:id="@+id/stop_query_devices"
          android:title="@string/stop_query_devices"
          android:icon="@android:drawable/ic_menu_close_clear_cancel"
          app:showAsAction="ifRoom|withText"
          android:visible="false"
          android:orderInCategory="105" />

    <item android:id="@+id/show_alarm_history"
          android:title="@string/alarm_history"
          android:icon="@android:drawable/ic_menu_agenda"
          app:showAsAction="ifRoom|withText"
          android:orderInCategory="106" />

      <item android:id="@+id/show_ibutton_history"
          android:title="@string/ibutton_history"
          android:icon="@android:drawable/ic_menu_view"
          app:showAsAction="ifRoom|withText"
          android:orderInCategory="107" />

    <item android:id="@+id/show_power_history"
          android:title="@string/power_history"
          android:icon="@android:drawable/ic_menu_manage"
          app:showAsAction="ifRoom|withText"
          android:orderInCategory="108" />

    <item android:id="@+id/clear_all_history"
          android:title="@string/clear_all_history"
          android:icon="@android:drawable/ic_menu_agenda"
          app:showAsAction="never"
          android:orderInCategory="109" />

    <item android:id="@+id/notify_on_sms"
          android:title="@string/notify_on_sms"
          android:icon="@android:drawable/ic_menu_info_details"
          app:showAsAction="never"
          android:checkable="true"
          android:checked="true"
          android:orderInCategory="110" />

    <item android:id="@+id/notify_with_sound"
          android:title="@string/notify_with_sound"
          android:icon="@android:drawable/ic_menu_info_details"
          app:showAsAction="never"
          android:checkable="true"
          android:checked="false"
          android:orderInCategory="111" />

    <item android:id="@+id/notify_alarm_with_sound"
          android:title="@string/notify_alarm_with_sound"
          android:icon="@android:drawable/ic_menu_info_details"
          app:showAsAction="never"
          android:checkable="true"
          android:checked="false"
          android:orderInCategory="112" />

    <item android:id="@+id/export_csv_data"
        android:title="@string/export_alarms"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="never"
        android:orderInCategory="113" />

</menu>