<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/settings_menu"
          android:title="@string/settings"
          android:icon="@android:drawable/ic_menu_preferences"
          app:showAsAction="never"
          android:orderInCategory="100" />

    <item android:id="@+id/device_history"
          android:title="@string/history"
          android:icon="@android:drawable/ic_menu_agenda"
          app:showAsAction="never"
          android:orderInCategory="101" />

    <item android:id="@+id/work_ongoing"
          android:checkable="true"
          android:title="@string/work_ongoing"
          android:icon="@android:drawable/ic_menu_directions"
          app:showAsAction="never"
          android:orderInCategory="101" />
</menu>